# lol_crawler

./: .gitignore  QUICKSTART.md  main.py  names.txt  pyproject.toml  requirements.txt  scraper.py  test_single.py
docs/: readme.md  setup_uv.md  specs.md
