[project]
name = "lol-crawler"
version = "1.0.0"
description = "League of Legends account data crawler for op.gg (NA region)"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.2",
    "pandas>=2.1.3",
    "lxml>=4.9.3",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 对于脚本项目，告诉 hatchling 包含所有 Python 文件
[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

